# DetourModKit

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .markdownlintignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DetourModKit_Acknowledgements.txt  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: arch-gate.yml  avx512.yml  ci.yml  coverage-pages.yml  pr-check.yml  quality.yml  release.yml  sanitizers.yml  simd-tier-correctness.yml
cmake/: DMKBackendPatch.cmake  DMKCoverage.cmake  DMKTesting.cmake  DetourModKitAbi.cmake.in  DetourModKitConfig.cmake.in  source_manifest.txt
cmake/safetyhook_patches/: 0001-dmk-safetyhook-backend-fixes.patch
docs/: README.md  hot-reload-guide.md
docs/analysis/avx512_verify_icount/: README.md
docs/analysis/event_dispatcher_bench_v3.1.0/: README.md  before.tsv
docs/analysis/event_dispatcher_bench_v3.2.0/: README.md  after.tsv
docs/analysis/memory_bench_v3.x/: README.md
docs/analysis/memory_veh_bench_v3.x/: README.md
docs/analysis/scanner_bench_v3.x/: README.md
docs/config-hot-reload/: README.md
docs/guides/: minimal-core.md
docs/guides/hooking/: hook-type-coverage.md  vmt-hook-config.md
docs/guides/hot-reload/: README.md  (+1 more)
docs/hot-reload/: README.md
docs/migration/: migrating-v3-to-v4.md
docs/misc/: anchors.md  aob-signatures.md  asan-memory-scanner.md  hot-path-memory.md  migrating-v3-to-v4.md  rtti-self-heal.md  rtti-walker.md  vmt-hook-config.md
docs/tests/: README.md  parse_coverage.py  test_coverage_guide.md
include/: DetourModKit.hpp
include/DetourModKit/: address.hpp  anchor.hpp  anchors.hpp  aob_scanner.hpp  async_logger.hpp  async_logger_config.hpp  bootstrap.hpp  config.hpp  config_entries.hpp  config_watcher.hpp  defines.hpp  diagnostics.hpp  diagnostics_dump.hpp  dmk.hpp  drift_manifest.hpp  error.hpp  event_dispatcher.hpp  filesystem.hpp  filesystem_utils.hpp  format.hpp  format_utils.hpp  hook.hpp  hook_manager.hpp  input.hpp  input_codes.hpp  log_level.hpp  logger.hpp  manifest.hpp  math.hpp  math_utils.hpp  memory.hpp  memory_utils.hpp  profile.hpp  profiler.hpp  region.hpp  rtti.hpp  rtti_dissect.hpp  scan.hpp  scanner.hpp  session.hpp  (+5 more)
scripts/: check_abi_reject.py  check_arch_gate.sh  check_backend_patch.py  check_comment_style.py  check_emit_tls.py  check_export_equality.py  check_header_hygiene.py  check_install_prefix.py  check_mechanical_style.py  check_package_matrix.py  run_fault_tests.sh  run_lifecycle_proofs.sh  test_check_backend_patch.py  test_check_emit_tls.py  test_check_export_equality.py  test_check_header_hygiene.py  test_check_mechanical_style.py  test_check_package_matrix.py  verify_ctest_timeout.cmake
src/: anchor.cpp  anchors.cpp  aob_scanner.cpp  async_logger.cpp  bootstrap.cpp  code_constant.cpp  config.cpp  config_input_fusion.hpp  config_watcher.cpp  diagnostics.cpp  diagnostics_dump.cpp  dmk.cpp  drift_manifest.cpp  event_dispatcher.cpp  filesystem.cpp  filesystem_utils.cpp  fork_join.hpp  hook.cpp  hook_manager.cpp  input.cpp  input_codes.cpp  input_intercept.cpp  input_intercept.hpp  input_key_cache.hpp  logger.cpp  manifest.cpp  math_utils.cpp  memory.cpp  memory_access.cpp  memory_cache.cpp  memory_internal.hpp  memory_module.cpp  memory_protect.cpp  memory_utils.cpp  platform.hpp  profiler.cpp  region.cpp  rtti.cpp  rtti_dissect.cpp  rtti_internal.hpp  (+19 more)
src/internal/: async_logger.cpp  async_logger.hpp  async_logger_queue.hpp  config_reload_gate.hpp  config_watcher.cpp  config_watcher.hpp  hook_backend.hpp  hook_fault_boundary.cpp  hook_fault_boundary.hpp  hook_ledger.cpp  hook_ledger.hpp  hook_publication.hpp  input_binding_gate.hpp  input_binding_lifecycle.hpp  input_delivery_scope.cpp  input_delivery_scope.hpp  input_hold_gate.hpp  input_intercept.cpp  input_intercept.hpp  input_key_cache.hpp  input_poller.cpp  input_poller.hpp  lifecycle_context.cpp  lifecycle_context.hpp  lifecycle_reaper.cpp  lifecycle_reaper.hpp  manifest_grammar.cpp  manifest_grammar.hpp  memory_fault.hpp  memory_guarded.cpp  memory_guarded.hpp  memory_representation_win32.hpp  mid_hook_adapter.hpp  module_name.hpp  rtti_shared.hpp  scan_batch.cpp  scan_batch.hpp  scan_engine.cpp  scan_engine.hpp  scan_exclusions.hpp  (+10 more)
tests/: CMakeLists.txt  bench_event_dispatcher.cpp  bench_logger.cpp  bench_memory.cpp  bench_scanner.cpp  main.cpp  test_alloc_probe.cpp  test_alloc_probe.hpp  test_anchor.cpp  test_anchors.cpp  test_aob_scanner.cpp  test_async_logger.cpp  test_bootstrap.cpp  test_code_constant.cpp  test_config.cpp  test_config_reload_quiesce.cpp  test_config_watcher.cpp  test_defines.cpp  test_diagnostics.cpp  test_diagnostics_dump.cpp  test_drift_manifest.cpp  test_event_dispatcher.cpp  test_filesystem.cpp  test_filesystem_utils.cpp  test_format.cpp  test_format_utils.cpp  test_foundation.cpp  test_gate_race_probe.cpp  test_heal_scheduler.cpp  test_hook.cpp  test_hook_integration.cpp  test_hook_manager.cpp  test_input.cpp  test_input_intercept.cpp  test_logger.cpp  test_manifest.cpp  test_math.cpp  test_math_utils.cpp  test_memory.cpp  test_memory_chain.cpp  (+26 more)
tests/fault/: CMakeLists.txt  test_fault_containment.cpp
tests/fixtures/: fault_injection.hpp  hook_target_lib.cpp  scratch_page.hpp  throwing_copy.hpp
tests/lifecycle/: CMakeLists.txt  bootstrap_probe_dll.cpp  diagnostics_late_emitter.cpp  fast_fail_probe.cpp  hook_kit_dll.cpp  input_first_use_oom.cpp  input_self_shutdown.cpp  logger_first_use_oom.cpp  profiler_first_use_oom.cpp  test_bootstrap_module_ref.cpp  test_config_servicer_self_retire.cpp  test_full_lifecycle.cpp  test_hook_instance_scope.cpp  test_hook_static_order.cpp  test_input_gate_abba.cpp  test_profiler_late_uaf.cpp  timeout_probe.cpp  xinput_detour_rundown.cpp  xinput_forwarding_guard.cpp  xinput_forwarding_proxy.def  xinput_forwarding_proxy_dll.cpp  xinput_local_ex_proxy.def  xinput_local_ex_proxy_dll.cpp
tests/package_build_tree/: CMakeLists.txt  main.cpp  windows_macro_probe.cpp
tests/package_dual_config/: CMakeLists.txt  main.cpp
tests/package_smoke/: CMakeLists.txt  main.cpp  windows_macro_probe.cpp
(+24 files in other folders)
